--- a/public/test.css
+++ b/public/test.css
@@ -2,7 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}.cards {
+}
+body{
+  background-color: #07172B !important;
+}
+.cards {
     z-index:- 1;
     padding: 4% 2%;
     width: 365px;
@@ -14,6 +18,7 @@
     place-items: center;
     overflow: hidden;
     border-radius: 20px;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
   }
   
   .cards h2 {
@@ -64,8 +69,6 @@
   
   .file-upload-form {
     z-index:1;
-    margin-top: 30px;
-    z-index: 1;
       width: fit-content;
       height: fit-content;
       display: flex;
@@ -151,11 +154,11 @@
       }
       
       .cardio {
-        width: 280px;
-        height: 150px;
+        width: 210px;
+        height: 110px;
         background: rgb(17, 4, 134);
         border-radius: 15px;
-        box-shadow: rgb(0,0,0,0.7) 5px 10px 50px ,rgb(0,0,0,0.7) -5px 0px 250px;
+        box-shadow: rgb(0,0,0,0.7) 5px 10px 50px ,rgb(255,255,255,0.7) -5px 0px 250px;
         display: flex;
         color: white;
         justify-content: center;
@@ -167,12 +170,10 @@
         overflow: hidden;
       }
       
-      .cardio:hover {
-        box-shadow: rgb(0,0,0) 5px 10px 50px ,rgb(0,0,0) -5px 0px 250px;
-      }
       
+
       .time-text {
-        font-size: 50px;
+        font-size: 40px;
         margin-top: 0px;
         margin-left: 15px;
         font-weight: 600;
@@ -202,5 +203,64 @@
       
       .cardio:hover > .moon {
         font-size: 23px;
+      }
+      
+      .submit{
+        margin-top: 10px;
+        font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+          "Liberation Mono", "Courier New", monospace;
+        font-size: 16px;
+        padding: 0.6em 6.7em;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+        font-weight: 500;
+        background: #1f2937;
+        color: white;
+        border: none;
+        position: relative;
+        overflow: hidden;
+        border-radius: 0.6em;
+        cursor: pointer;
+      }
+      
+      .gradient {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        border-radius: 0.6em;
+        margin-top: -0.25em;
+        background-image: linear-gradient(
+          rgba(0, 0, 0, 0),
+          rgba(0, 0, 0, 0),
+          rgba(0, 0, 0, 0.3)
+        );
+      }
+      
+      .label {
+        position: relative;
+        top: -1px;
+      }
+      
+      .transition {
+        transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+        transition-duration: 500ms;
+        background-color: #07172B;
+        border-radius: 9999px;
+        width: 0;
+        height: 0;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+      }
+      
+      button:hover .transition {
+        width: 20em;
+        height: 14em;
+      }
+      
+      button:active {
+        transform: scale(0.97);
       }
       
